--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <title>Comets!</title>
+    <link href='https://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
 
